fix text wrapping in h tags

--- a/frontend/src/scss/reset.scss
+++ b/frontend/src/scss/reset.scss
@@ -63,7 +63,7 @@ h3,
 h4,
 h5,
 h6 {
-  text-wrap: balance;
+  text-wrap: auto;
 }
 
 /*
